--- a/app/src/main/res/layout/activity_admin_panel.xml
+++ b/app/src/main/res/layout/activity_admin_panel.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:hint="name of the place"
+            android:hint="Name of the Place"
             android:text="" />
 
     </android.support.design.widget.TextInputLayout>
@@ -37,7 +37,7 @@
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
             android:text=""
-            android:hint="Place Price rate "
+            android:hint=" Price rate "
             android:id="@+id/place_priceET"
             android:layout_margin="10dp"
             android:layout_height="wrap_content" />
@@ -56,7 +56,7 @@
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
             android:text=""
-            android:hint="Place Description"
+            android:hint="Description"
             android:id="@+id/place_descET"
             android:layout_margin="10dp"
             android:layout_height="wrap_content" />
@@ -64,8 +64,8 @@
 
     <ImageView
         android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="150dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
