--- a/app/src/main/res/layout/activity_admin_panel.xml
+++ b/app/src/main/res/layout/activity_admin_panel.xml
@@ -73,7 +73,7 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/select_image"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:srcCompat="@drawable/beach" />
 
     <Button
         android:id="@+id/select_image"
