--- a/app/src/main/res/layout/travels_list.xml
+++ b/app/src/main/res/layout/travels_list.xml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     >
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="horizontal"
@@ -20,7 +15,7 @@
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_marginTop="16dp"
-                android:id="@+id/imageView"
+                android:id="@+id/deal_imageView"
                 android:layout_marginStart="2dp"
                 android:layout_marginEnd="5dp"
                 android:src="@mipmap/ic_launcher" />
@@ -56,19 +51,16 @@
                 android:layout_width="wrap_content"
                 android:orientation="vertical"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="50dp"
-                android:layout_marginEnd="20dp"
+                android:layout_marginTop="62dp"
+                android:layout_marginEnd="8dp"
                 android:layout_marginStart="120dp"
                 android:gravity="end">
-
                 <TextView
                     android:id="@+id/priceTV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity=""
                     android:text="price"
                     android:textColor="@color/colorAccent" />
             </LinearLayout>
         </LinearLayout>
-    </android.support.v7.widget.CardView>
-</android.support.constraint.ConstraintLayout>
+</android.support.v7.widget.CardView>
